# abagames-tumiki-fighters

./: CMakeLists.txt  README  build.xml
barrage/basic/: bar.xml  bar_accel.xml  bar_accel_weak.xml  twin.xml  wedge.xml  whip.xml  whip_fix.xml
barrage/change/: 0to1.xml  downaccel.xml  fast.xml  slow.xml  slowback.xml  slowdown.xml  slowfixed.xml  slowstop.xml  stop.xml  straight_rnd.xml
barrage/move/: bit.xml
barrage/shot/: aim.xml  side.xml  side_rnd.xml  side_seq.xml  slowaim.xml  vertical.xml
barrage/spread/: rand.xml  roll1.xml  roll1_fixdeg.xml  roll2.xml  roll3way.xml  round.xml  shotgun.xml  squirt.xml
barrage/technical/: bit.xml  roundshot.xml
field/: fld1.fld  fld5.fld
resource/: tf.RES
src/: CMakeLists.txt
src/abagames/: CMakeLists.txt
src/abagames/tf/: CMakeLists.txt  attractmanager.d  barragemanager.d  boot.d  bulletactor.d  bulletactorpool.d  bulletinst.d  damagegauge.d  enemy.d  enemyspec.d  field.d  fragment.d  gamemanager.d  letterrender.d  mobileletter.d  morphbullet.d  particle.d  prefmanager.d  screen.d  ship.d  soundmanager.d  splinter.d  stagemanager.d  stuckenemy.d  tumiki.d  tumikiset.d
src/abagames/util/: CMakeLists.txt  actorpool.d  csv.d  iterator.d  rand.d  (+2 more)
src/abagames/util/sdl/: CMakeLists.txt  input.d  mainloop.d  pad.d  screen3d.d  sdlexception.d  sound.d  texture.d
stage/: stg3.stg
tumiki/boss/: b1m.tmk  b2p1.tmk  b2p2.tmk  b3m.tmk
tumiki/field/: o11.tmk  o13.tmk  o36.tmk  o37.tmk  o372.tmk
tumiki/middle/: b3p1.tmk  b4p1.tmk  m1m.tmk  m1p3.tmk
tumiki/myship/: ship.tmk
tumiki/small/: s1.tmk  s2.tmk  s6.tmk
(+3 files in other folders)
